Initial port to ros2
Initial port to ros2 of: qt_dotgraph, qt_gui, qt_gui_cpp, qt_gui_app, qt_gui_py_common

Updated all to be ament packages, and commented out/fixed ros1 uses

--- a/qt_gui_app/package.xml
+++ b/qt_gui_app/package.xml
@@ -1,4 +1,5 @@
-<package>
+<?xml version='1.0' encoding='utf-8'?>
+<package format="2">
   <name>qt_gui_app</name>
   <version>0.3.4</version>
   <description>
@@ -12,7 +13,11 @@
   <url type="bugtracker">https://github.com/ros-visualization/qt_gui_app/issues</url>
   <author>Dirk Thomas</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament</buildtool_depend>
 
-  <run_depend version_gte="0.3.0">qt_gui</run_depend>
+  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
+
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
