--- a/qt_dotgraph/package.xml
+++ b/qt_dotgraph/package.xml
@@ -1,4 +1,5 @@
-<package>
+<?xml version='1.0' encoding='utf-8'?>
+<package format="2">
   <name>qt_dotgraph</name>
   <version>0.3.4</version>
   <description>
@@ -12,10 +13,14 @@
   <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
   <author>Thibault Kruse</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament</buildtool_depend>
 
-  <run_depend>python-pydot</run_depend>
-  <run_depend version_gte="0.3.0">python_qt_binding</run_depend>
+  <exec_depend>python-pydot</exec_depend>
+  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>
 
   <test_depend>python-pygraphviz</test_depend>
+
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
