--- a/qt_gui/package.xml
+++ b/qt_gui/package.xml
@@ -1,4 +1,5 @@
-<package>
+<?xml version='1.0' encoding='utf-8'?>
+<package format="2">
   <name>qt_gui</name>
   <version>0.3.4</version>
   <description>
@@ -14,12 +15,16 @@
   <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
   <author>Dirk Thomas</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament</buildtool_depend>
 
   <build_depend>qt5-qmake</build_depend>
   <build_depend>python-qt5-bindings</build_depend>
 
-  <run_depend version_gte="0.3.0">python_qt_binding</run_depend>
-  <run_depend>python-rospkg</run_depend>
-  <run_depend>tango-icon-theme</run_depend>
+  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>
+  <exec_depend>python-rospkg</exec_depend>
+  <exec_depend>tango-icon-theme</exec_depend>
+
+  <export>
+    <build_type>ament_cmake</build_type>
+  </export>
 </package>
