--- a/qt_gui_cpp/CMakeLists.txt
+++ b/qt_gui_cpp/CMakeLists.txt
@@ -1,24 +1,36 @@
 cmake_minimum_required(VERSION 2.8.3)
 project(qt_gui_cpp)
 
-find_package(catkin REQUIRED COMPONENTS pluginlib)
+# Add support for C++11
+if(NOT WIN32)
+  add_definitions(-std=c++11)
+endif()
+
+find_package(ament_cmake REQUIRED)
+find_package(ament_cmake_python REQUIRED)
+find_package(pluginlib REQUIRED)
+find_package(TinyXML REQUIRED)
+
+ament_python_install_package(${PROJECT_NAME})
+
+set(INCLUDE_DIRS include ${ament_cmake_INCLUDE_DIRS} ${pluginlib_INCLUDE_DIRS} ${TinyXML_INCLUDE_DIRS})
+include_directories(${INCLUDE_DIRS})
+
+set(LIBRARY_DIRS ${ament_cmake_LIBRARY_DIRS} ${pluginlib_LIBRARY_DIRS} ${TinyXML_LIBRARY_DIRS})
+
+link_directories(${LIBRARY_DIRS})
+
+set(LIBS ${ament_cmake_LIBRARIES} ${pluginlib_LIBRARIES} ${TinyXML_LIBRARIES})
+
 find_package(Boost REQUIRED COMPONENTS filesystem system)
-
-catkin_package(
-  INCLUDE_DIRS include
-  LIBRARIES ${PROJECT_NAME}
-  CATKIN_DEPENDS pluginlib
-  CFG_EXTRAS ${PROJECT_NAME}-extras.cmake
-  DEPENDS Boost
-)
-
-catkin_python_setup()
-
-include_directories(include ${catkin_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS})
 
 add_subdirectory(src)
 
 install(DIRECTORY include/qt_gui_cpp/
-  DESTINATION ${CATKIN_PACKAGE_INCLUDE_DESTINATION})
-install(FILES plugin.xml
-  DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION})
+  DESTINATION include/${PROJECT_NAME})
+install(FILES plugin.xml DESTINATION share/${PROJECT_NAME})
+
+ament_export_dependencies(ament_cmake)
+ament_export_include_directories(${INCLUDE_DIRS})
+
+ament_package()
