--- a/qt_gui_cpp/package.xml
+++ b/qt_gui_cpp/package.xml
@@ -1,4 +1,5 @@
-<package>
+<?xml version='1.0' encoding='utf-8'?>
+<package format="2">
   <name>qt_gui_cpp</name>
   <version>0.3.4</version>
   <description>
@@ -13,7 +14,7 @@
   <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
   <author>Dirk Thomas</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament</buildtool_depend>
 
   <build_depend>pkg-config</build_depend>
   <build_depend version_gte="1.9.23">pluginlib</build_depend>
@@ -22,10 +23,12 @@
   <build_depend>qtbase5-dev</build_depend>
   <build_depend>tinyxml</build_depend>
 
-  <run_depend version_gte="1.9.23">pluginlib</run_depend>
-  <run_depend version_gte="0.3.0">qt_gui</run_depend>
+  <exec_depend version_gte="1.9.23">pluginlib</exec_depend>
+  <exec_depend version_gte="0.3.0">qt_gui</exec_depend>
 
   <export>
-    <qt_gui plugin="${prefix}/plugin.xml"/>
+    <qt_gui plugin="${prefix}/plugin.xml" />
+    <build_type>ament_cmake</build_type>
+    <build_type>ament_python</build_type>
   </export>
 </package>
