--- a/qt_gui_py_common/package.xml
+++ b/qt_gui_py_common/package.xml
@@ -1,4 +1,5 @@
-<package>
+<?xml version='1.0' encoding='utf-8'?>
+<package format="2">
   <name>qt_gui_py_common</name>
   <version>0.3.4</version>
   <description>
@@ -12,8 +13,12 @@
   <url type="bugtracker">https://github.com/ros-visualization/qt_gui_core/issues</url>
   <author>Dorian Scholz</author>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament</buildtool_depend>
 
-  <run_depend version_gte="0.3.0">python_qt_binding</run_depend>
-  <run_depend>python-rospkg</run_depend>
+  <exec_depend version_gte="0.3.0">python_qt_binding</exec_depend>
+  <exec_depend>python-rospkg</exec_depend>
+
+  <export>
+    <build_type>ament_python</build_type>
+  </export>
 </package>
